--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "parcel *.html --open"
+    "start": "parcel *.html --open",
+    "build": "rm -rf dist && parcel build *.html --public-url ./"
   },
   "repository": {
     "type": "git",
